--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     //navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 }
