--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //artifact for shared view model
+    implementation "androidx.fragment:fragment-ktx:1.3.1"
 }
